<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/assessName"
        android:layout_width="356dp"
        android:layout_height="39dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/assessment_name"
        android:textColor="@color/term_item_color"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/assessType"
        android:layout_width="126dp"
        android:layout_height="33dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/type"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessName" />

    <TextView
        android:id="@+id/courseNum"
        android:layout_width="140dp"
        android:layout_height="33dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:text="@string/course_number"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/assessType"
        app:layout_constraintTop_toBottomOf="@+id/assessName" />


</android.support.constraint.ConstraintLayout>